# flockwave-conn

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.md  MANIFEST.in  Pipfile  README.md  pyproject.toml  setup.py  tbump.toml
.github/workflows/: pytest.yml
flockwave/: __init__.py
flockwave/connections/: __init__.py  base.py  factory.py  version.py
src/flockwave/: channels.py  concurrency.py  networking.py
src/flockwave/channels/: __init__.py  encoder.py  lossy.py  message.py  parser.py  rpc.py  types.py  utils.py
src/flockwave/connections/: __init__.py  base.py  capabilities.py  channel.py  dummy.py  errors.py  factory.py  file.py  process.py  serial.py  servers.py  socket.py  stream.py  supervision.py  types.py  version.py
src/flockwave/connections/middleware/: __init__.py  base.py  log.py  read_only.py  write_only.py
src/flockwave/connections/utils/: hexdump.py
src/flockwave/listeners/: __init__.py  base.py  factory.py  socket.py
test/: test_concurrency.py  test_dummy.py  test_file.py  test_loopback.py  test_lossy_channel.py  test_middleware_log.py  test_middleware_read_only.py  test_middleware_write_only.py  test_networking.py  test_process.py  test_task.py  test_tcp_keepalive.py  test_tcp_listener.py  test_udp_socket.py  test_unix_socket.py
