[tool.poetry]
name = "flockwave-conn"
version = "7.1.0"
description = "Connection objects for various data sources"
authors = ["Tamas Nepusz <tamas@collmot.com>"]
packages = [{ include = "flockwave", from = "src" }]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
blinker = "^1.4"
trio = ">=0.24.0"
trio-util = ">=0.7.0"
flockwave-parsers = { version = "^2.0.0", source = "fury" }
pyserial = { version = "^3.5", optional = true }
tinyrpc = { version = "^1.1.7", extras = ["msgpack"], optional = true }
flockwave-net = { version = "^7.0.0", extras = ["async"], source = "fury" }
flockwave-async = { version = "^1.4.0", source = "fury" }
wrapt = "^1.16.0"
hexdump = "^3.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.0"
pytest-trio = ">=0.8.0"
pytest-cov = "^5.0.0"
coverage = { extras = ["toml"], version = "^7.0" }

[tool.poetry.extras]
rpc = ["tinyrpc"]
serial = ["pyserial"]

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "fury"
url = "https://pypi.fury.io/skybrush/"
priority = "supplemental"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
lint.ignore = ["B026", "B905", "C901", "E402", "E501"]
lint.select = ["B", "C", "E", "F", "W"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
