[project]
name = "flockwave-conn"
version = "8.4.1"
description = "Connection objects for various data sources"
authors = [{ name = "Tamas Nepusz", email = "tamas@collmot.com" }]
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "blinker>=1.4",
    "trio>=0.26.2",
    "trio-util>=0.7.0",
    "flockwave-parsers>=3.0.1",
    "flockwave-net[async]>=8.0.0",
    "wrapt>=1.16.0",
]

[project.optional-dependencies]
rpc = ["flockwave-async>=2.0.1", "tinyrpc[msgpack]>=1.1.7"]
serial = ["pyserial>=3.5"]

[tool.poetry]
packages = [{ include = "flockwave", from = "src" }]

[tool.poetry.dependencies]
flockwave-parsers = { source = "fury" }
flockwave-net = { source = "fury" }
flockwave-async = { source = "fury" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-trio = ">=0.8.0"
pytest-cov = "^6.0.0"
coverage = { extras = ["toml"], version = "^7.0" }

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "fury"
url = "https://pypi.fury.io/skybrush/"
priority = "supplemental"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
trio_mode = true

[tool.ruff]
lint.ignore = ["B026", "B905", "C901", "E402", "E501"]
lint.select = ["B", "C", "E", "F", "W"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
