[project]
name = "flockwave-conn"
version = "9.2.0"
description = "Connection objects for various data sources"
authors = [{ name = "Tamas Nepusz", email = "tamas@collmot.com" }]
license = "MIT"
requires-python = ">=3.10"
dependencies = [
  "blinker>=1.4",
  "trio>=0.26.2",
  "trio-util>=0.7.0",
  "flockwave-parsers>=3.0.1",
  "flockwave-net[async]>=8.1.0",
  "wrapt>=1.16.0",
]

[project.optional-dependencies]
rpc = ["flockwave-async>=2.0.1", "tinyrpc[msgpack]>=1.1.7"]
serial = ["pyserial>=3.5"]

[dependency-groups]
dev = [
  "pytest>=8.3.2",
  "coverage[toml]>=7.2.7",
  "pytest-cov>=6.0.0",
  "pytest-trio>=0.8.0",
]

[tool.uv.build-backend]
module-name = "flockwave"
namespace = true

[[tool.uv.index]]
name = "fury"
url = "https://pypi.fury.io/skybrush/"
publish-url = "https://pypi.fury.io/skybrush/"

[tool.uv.sources]
flockwave-parsers = { index = "fury" }
flockwave-net = { index = "fury" }
flockwave-async = { index = "fury" }

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
trio_mode = true

[tool.ruff]
lint.ignore = ["B026", "B905", "C901", "E402", "E501"]
lint.select = ["B", "C", "E", "F", "I", "W"]

[tool.ty.environment]
python = ".venv"

[build-system]
requires = ["uv_build>=0.8.0"]
build-backend = "uv_build"
